tests/negative/typecheck/cyclic.orng
const A = (x: B, y: Int)
const B = (x: A, y: Int)

fn main() -> Int {
    2
}